modules/grammars/ide/src/test/resources/cocos/valid/DuplicateIdentifierConfiguration.ide
package valid

typedef configuration DuplicateIdentifierConfiguration {
    configuration identifier: CommonConfiguration {

    }
}
