modules/grammars/ide/src/test/resources/cocos/invalid/ConfigurationName.ide
package invalid

typedef module ConfigurationName {
    configuration config: CommonConfiguration {

    }
}
